--- a/anindilyakwa.html
+++ b/anindilyakwa.html
@@ -57,14 +57,14 @@
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                         <li><a href="#aboutme" class="smoothScroll">About</a></li>
-                         <li><a href="#research" class="smoothScroll">Research</a></li>
-                         <li><a href="#languagecommunities" class="smoothScroll">Language Communities</a></li>
-                         <li><a href="#projects" class="smoothScroll">Projects</a></li>
-                         <li><a href="#publications" class="smoothScroll">Publications</a></li>
-                         <li><a href="#presentations" class="smoothScroll">Presentations</a></li>
-                         <li><a href="#teaching" class="smoothScroll">Teaching</a></li>
-                         <li><a href="#contact" class="smoothScroll">Contact</a></li>
+                         <li><a href="/index.html#aboutme" class="smoothScroll">About</a></li>
+                         <li><a href="/index.html#research" class="smoothScroll">Research</a></li>
+                         <li><a href="/index.html#languagecommunities" class="smoothScroll">Language Communities</a></li>
+                         <li><a href="/index.html#projects" class="smoothScroll">Projects</a></li>
+                         <li><a href="/index.html#publications" class="smoothScroll">Publications</a></li>
+                         <li><a href="/index.html#presentations" class="smoothScroll">Presentations</a></li>
+                         <li><a href="/index.html#teaching" class="smoothScroll">Teaching</a></li>
+                         <li><a href="/index.html#contact" class="smoothScroll">Contact</a></li>
                     </ul>
                 
                </div>
