--- a/index.html
+++ b/index.html
@@ -964,17 +964,17 @@
      <br>
                <div class="col-md-12 col-sm-12">
                     <ul class="social-icon">
-                         <li><a href="mailto:james.bednall@anu.edu.au" target="_blank"><div class="project-image14"></div></a></li>
+                         <li><a href="mailto:james.bednall@anu.edu.au" target="_blank"><div class="project-image14"></a></li>
                          
-                         <li><a href="https://researchers.anu.edu.au/researchers/bednall-j" target="_blank"><div class="project-image17"></div></a></li>
+                         <li><a href="https://researchers.anu.edu.au/researchers/bednall-j" target="_blank"><div class="project-image17"></a></li>
 
-                         <li><a href="https://anu-au.academia.edu/JamesBednall" target="_blank"><div class="project-image15"></div></a></li>
+                         <li><a href="https://anu-au.academia.edu/JamesBednall" target="_blank"><div class="project-image15"></a></li>
 
-                         <li><a href="https://www.researchgate.net/profile/James_Bednall" target="_blank"><div class="project-image19"></div></a></li>
+                         <li><a href="https://www.researchgate.net/profile/James_Bednall" target="_blank"><div class="project-image19"></a></li>
 
-                         <li><a href="https://au.linkedin.com/in/james-bednall-0aa94b64" target="_blank"><div class="project-image16"></div></a></li>
+                         <li><a href="https://au.linkedin.com/in/james-bednall-0aa94b64" target="_blank"><div class="project-image16"></a></li>
 
-                         <li><a href="https://orcid.org/0000-0001-6155-2878" target="_blank"><div class="project-image18"></div></a></li>
+                         <li><a href="https://orcid.org/0000-0001-6155-2878" target="_blank"><div class="project-image18"></a></li>
                     </ul>
                </div>
           </div>
