--- a/index.html
+++ b/index.html
@@ -216,12 +216,14 @@
           <br><br><br>
 
                <div class="row">
+                    <div class="container-fluid">
                     <p>I work and do research with a number of communities in Mid-West Western Australia and north-east Arnhem Land 
                          (Northern Territory). In the Mid-West, I have worked with the Malgana, Ngarlawangga, Nhanda, Wajarri, Warriyangka, 
                          Yingkarta and Yinhawangka languages and communities, however I have worked most extensively with the Badimaya community, 
                          in and around Mt Magnet. In north-east Arnhem Land, the majority of my work has been based on the Groote Eylandt archipelago, 
                          working with Warnumamalya communities on their language Anindilyakwa.
                     </p>
+                    </div>
                </div>
           </div>
           
