--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
                <div class="col-sm-6 col-sm-6">
                     <br> 
                     <div class="container-fluid">
-                         <iframe width="300" height="200" src="https://www.youtube.com/embed/v5K02E-widg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
+                         <center><iframe width="300" height="200" src="https://www.youtube.com/embed/v5K02E-widg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                         </center></div>
                </div>
 
                <div class="col-sm-6 col-sm-6">
