--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     -->
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-     <meta name="description" content="linguist, linguistics, Australian languages, Aboriginal languages, Anindilyakwa, Badimaya, Badimia, semantics, pragmatics, morphosyntax, fieldwork, language documentation, language revitalisation, language maintenance, lexicography, community language planning">
+     <meta name="description" content="James Bednall is a lecturer in linguistics at Batchelor Institute of Indigenous Tertiary Education and a visiting fellow at the Australian National University. His research focuses on morphosyntax, semantics and pragmatics, particularly in Aboriginal languages of western and northern Australia. He works in collaboration with a number of communities in Mid-West Western Australia and north-east Arnhem Land.">
      <meta name="keywords" content="linguist, linguistics, Australian languages, Aboriginal languages, Anindilyakwa, Badimaya, Badimia, semantics, pragmatics, morphosyntax, fieldwork, language documentation, language revitalisation, language maintenance, lexicography, community language planning">
      <meta name="team" content="James Bednall">
      <meta name="author" content="James Bednall">
