--- a/anindilyakwa.html
+++ b/anindilyakwa.html
@@ -121,7 +121,7 @@
                     <p>Anindilyakwa has received a reasonable amount of documentation and description. Below is a list of key linguistic 
                          research that has been undertaken over the last century:</p>
 
-                         <ul>
+                         <ul class="bullet">
                               <li>Tindale, Norman. 1925-1926. Natives of Groote Eylandt and of the west coast of the Gulf of Carpentaria. 
                                    Parts 1-2. <i>Records of the South Australian Museum</i>, 3, 61–143.</li>
                               <li>Capell, Arthur. 1942. Languages of Arnhem Land, North Australia. Oceania, 12, 4, 364–392. JSTOR 40327959.</li>
@@ -181,7 +181,7 @@
                          <br>
 
                          <h3>Archived language collections are available at:</h3>
-                         <ul>
+                         <ul class="bullet">
                               <li>Bednall, James (collector) <i>Anindilyakwa language documentation.</i> [JRB1]. <a href="http://catalog.paradisec.org.au/collections/JRB1" target="_blank">Digital
                                     collection</a> managed by PARADISEC. [OpenAccess]</li>
 
@@ -194,7 +194,7 @@
                          <br>
 
                          <h3>Audio and video language resources are available at:</h3>
-                         <ul>
+                         <ul class="bullet">
                               <li>Groote Eylandt Language Centre <a href="https://www.youtube.com/channel/UCXCRwqVs3UTLPvR9q7TVKeA" target="_blank">YouTube channel</a></li>
                               <li><a href="https://anindilyakwa.org.au/resources/dictionaries/ela/" target="_blank">Ekirra-langwa web dictionary</a></li>
                               <li><a href="https://anindilyakwa.org.au/resources/dictionaries/alnf" target="_blank">ALNF web dictionary</a></li>
@@ -203,7 +203,7 @@
 
                          <h3>Useful community-focused language resources are available from the <a href="http://www.anindilyakwa.org.au/language-resources/items-for-sale/" target="_blank">
                               Groote Eylandt Language Centre:</a></h3>
-                         <ul>
+                         <ul class="bullet">
                               <li>Groote Eylandt Linguistics. 1993. <i>Eningerribirra-langwa jurra [=Book about all sorts of things]</i>. Angurugu, Australia.</li>
                               <li>Lalara, Rhoda and Alfred Lalara. 2014. <i>When we go walkabout: Yirruwa Yirrilikenuma-langwa</i>. Sydney: Allen & Unwin.</li>
                               <li>Clan songs, church songs, band music and educational CDs.</li>
@@ -211,7 +211,7 @@
                          <br>
 
                          <h3>Other useful websites relating to Anindilyakwa language include:</h3>
-                         <ul>
+                         <ul class="bullet">
                               <li><a href="http://www.anindilyakwa.org.au/" target="_blank">Groote Eylandt Language Centre</a></li>
                               <li><a href="http://www.anindilyakwa.com/" target="_blank">Anindilyakwa Land Council</a></li>
                               <li><a href="http://www.anindilyakwasafe.net/" target="_blank">Anindilyakwa Safe</a></li>
