--- a/badimaya.html
+++ b/badimaya.html
@@ -132,7 +132,7 @@
                
                     
                <h3>Below is a list of key linguistic research that has been undertaken over the last half century:</h3>
-                    <ul>
+                    <ul class="bullet">
                          <li>O’Grady, G. N., C. F. Voegelin & F. M. Voegelin. 1966. Languages of the world: Indo-Pacific casicle 6. <i>Anthropological 
                               Linguistics</i>, 8(2).</li>
                          <li>Kingsford, R. J. 1982. <i>Yamadyi Law: The continuing significance of traditional Aboriginal culture in the 
@@ -144,7 +144,7 @@
                     </ul>
 
                     <h3>Archived language collections are available at:</h3>
-                    <ul>
+                    <ul class="bullet">
                          <li>    Bednall, James (collector) <a href="http://aiatsis.gov.au/sites/default/files/catalogue_resources/irra-wangga_08_interim_finding_aid_1.pdf" 
                               target="_blank"><i>Badimaya language recordings, 2012-2014</i></a>. [IRRA-WANGGA_08]. (64 audio files; 44 hrs). 
                               Digital collection managed by AIATSIS. 
@@ -153,7 +153,7 @@
 
                     <h3>Useful community-focused language resources are available from <a href="http://www.bundiyarra.com/shop" target="_blank">
                          Bundiyarra Aboriginal Community Aboriginal Corporation:</a></h3>
-                    <ul>
+                    <ul class="bullet">
                          <li>Benjamin, Joe. 2012. <i>Joe Benjamin Stories: Story about the Mallee Hen</i>. Irra Wangga Language Centre: Geraldton, Australia.</li>
                          <li>Benjamin, Joe. 2012. <i>Joe Benjamin Stories: The Porcupine Story</i>. Irra Wangga Language Centre: Geraldton, Australia.</li>
                          <li>Bednall, James (ed.) 2013. <i>Bush Yarns from Mt Magnet Series: Ngalimi wadha marun.gu = looking for quandongs.</i> 
@@ -175,7 +175,7 @@
                     </ul>
 
                     <h3>Other useful websites relating to Badimaya language include:</h3>
-                    <ul>
+                    <ul class="bullet">
                          <li><a href="http://www.bundiyarra.com/irrawangga" target="_blank">Bundiyarra Aboriginal Community Aboriginal Corporation</a></li>
                          <li><a href="https://glottolog.org/resource/languoid/id/badi1246" target="_blank">Glottolog</a></li>
                          <li><a href="https://wals.info/languoid/lect/wals_code_bdm" target="_blank">World Atlas of Language Structures (WALS)</a></li>
