--- a/badimaya.html
+++ b/badimaya.html
@@ -40,7 +40,7 @@
 
 
      <!-- MENU -->
-     <section class="navbar custom-navbar2 navbar-fixed-top" role="navigation">
+     <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
           <div class="container">
 
                <div class="navbar-header">
