--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                               <div class="col-xs-4 col-sm-4 col-lg-2">
                                    <div class="project-image7" onclick="window.open('/images/Sections/Nganang-Badimaya-Wangga-1.png','mywindow');" style="cursor: pointer;"></div>
                               </div>
-                              <div class="col-xs-8 col-sm-8 col-lg-10">
+                              <div class="col-xs-8 col-sm-8 col-lg-10"><br>
                                    <p class="pad-40"><strong>Bednall, James</strong>, Sue Chiera and Rosie Sitorus (eds). 2017. <a href="https://www.bundiyarra.com/shop"><i>Nganang Badimaya Wangga: Yarns with 
                                         Gami Ollie George</i></a>. Geraldton, Australia: Bundiyarra - Irra Wangga Language Centre. 92 pages.</p>
                                     </div>
