--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                               <div class="col-xs-4 col-sm-4 col-lg-2">
                                    <div class="project-image8" onclick="window.open('/images/Sections/On-Badimaya-Country.jpg','mywindow');" style="cursor: pointer;"></div>
                               </div>
-                              <div class="col-xs-8 col-sm-8 col-lg-10">
+                              <div class="col-xs-8 col-sm-8 col-lg-10"><br>
                                    <p class="pad-40">Wagner, Johanna and <strong>James Bednall</strong> (eds). 2013. <i>On Badimaya Country</i>. Geraldton, Australia: Combined Universities Centre for Rural Health 
                                         (CUCRH). 60 pages.</p>
                                     </div>
@@ -616,7 +616,7 @@
                               <div class="col-xs-4 col-sm-4 col-lg-2">
                                    <div class="project-image9" onclick="window.open('/images/Sections/Badimaya-seasonal-calendar.png','mywindow');" style="cursor: pointer;"></div>
                               </div>
-                              <div class="col-xs-8 col-sm-8 col-lg-10">
+                              <div class="col-xs-8 col-sm-8 col-lg-10"><br>
                                    <p class="pad-40">Wagner, Johanna and <strong>James Bednall</strong> (eds). 2013. <i>Badimaya Seasonal Calendar</i>. Geraldton, Australia: Combined Universities Centre for Rural 
                                         Health (CUCRH). 15 pages.</p>
                                     </div>
@@ -627,7 +627,7 @@
                               <div class="col-xs-4 col-sm-4 col-lg-2">
                                    <div class="project-image10" onclick="window.open('/images/Sections/Bush-yarns-from-Mt-Magnet.png','mywindow');" style="cursor: pointer;"></div>
                               </div>
-                              <div class="col-xs-8 col-sm-8 col-lg-10">
+                              <div class="col-xs-8 col-sm-8 col-lg-10"><br>
                                    <p class="pad-40"><strong>Bednall, James</strong> (ed). 2013. <a href="https://www.bundiyarra.com/shop" target="_blank"><i>Bush Yarns from Mt Magnet Series: Ngalimi wadha 
                                         marun.gu = looking for quandongs; Ngalimi yan.guwa wadha bimbawu = looking for bimba; Wandi guwiyarl yuga? = where is the goanna?</i></a> Geraldton, Australia: 
                                         Bundiyarra - Irra Wangga Language Centre. 70 pages.</p>
@@ -639,7 +639,7 @@
                               <div class="col-xs-4 col-sm-4 col-lg-2">
                                    <div class="project-image11" onclick="window.open('/images/Sections/Joe-Benjamin-Stories.png','mywindow');" style="cursor: pointer;"></div>
                               </div>
-                              <div class="col-xs-8 col-sm-8 col-lg-10">
+                              <div class="col-xs-8 col-sm-8 col-lg-10"><br>
                                    <p class="pad-40"><strong>Bednall, James</strong> (ed). 2013. <a href="https://www.bundiyarra.com/shop" target="_blank"><i>Joe Benjamin Stories: Story about the Mallee Hen and 
                                         The Porcupine Story</i></a>. Geraldton, Australia: Irra Wangga Language Centre. 20 pages.</p>
                                   
