--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                               <div class="col-xs-4 col-sm-4 col-lg-2">
                                    <div class="project-image5" onclick="window.open('/images/Sections/Badimaya-dictionary.png','mywindow');" style="cursor: pointer;"></div>
                               </div>
-                              <div class="col-xs-8 col-sm-8 col-lg-10">
+                              <div class="col-xs-8 col-sm-8 col-lg-10"><br>
                                    <p class="pad-40"><strong>Bednall, James</strong> (compiler). 2021. <a href="https://www.bundiyarra.com/shop" target="_blank"><i>Badimaya dictionary: An Aboriginal language of Western Australia</i></a> (2nd ed.) Geraldton, Australia: 
                                         Bundiyarra - Irra Wangga Language Centre. 128 pages. (1st ed. published 2014).</p>
                               </div>
@@ -541,7 +541,7 @@
                               <div class="col-xs-4 col-sm-4 col-lg-2">
                                    <div class="project-image6" onclick="window.open('/images/Sections/Badimaya-Guwaga.png','mywindow');" style="cursor: pointer;"></div>
                               </div>
-                              <div class="col-xs-8 col-sm-8 col-lg-10">
+                              <div class="col-xs-8 col-sm-8 col-lg-10"><br>
                                    <p class="pad-40"><strong>Bednall, James</strong> (ed). 2014. <a href="https://www.bundiyarra.com/shop" target="_blank"><i>Badimaya Guwaga = Talking Badimaya: An illustrated wordlist of the Badimaya language of Western Australia. </i></a>
                                         Geraldton, Australia: Bundiyarra - Irra Wangga Language Centre. 104 pages.</p>                              </div>
                          </div>
