change to the intro

--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
                          <!-- <h2>Minimal Design</h2> -->
                          <p>I am a lecturer in linguistics at <a href="https://www.batchelor.edu.au/students/courses/higher-education-courses/he-languages-and-linguistics/" target="_blank">
                               Batchelor Institute of Indigenous Tertiary Education</a> (BIITE), a visiting fellow at the <a href="https://researchers.anu.edu.au/researchers/bednall-j" target="_blank">Australian National 
-                              University</a> and a research affiliate with the ARC Centre of Excellence for the Dynamics of Language (<a href="http://www.dynamicsoflanguage.edu.au/team/alumni/" 
-                              target="_blank">CoEDL</a>).</p>
+                              University</a> and a member of the <a href="https://language-lab.cdu.edu.au/" target="_blank">Top End Language Lab</a>.</p>
 
                          <p>My experience as a linguist spans the research, teaching, community development and not-for-profit sectors, including substantial project 
                               and people management, teamwork, and local/national/international collaboration. Find out more about 
