--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
              
 
                <div class="col-sm-6 col-sm-6">
-                    <div class="project"></div>
+                    <div class="project-image22"></div>
                     <h6>Lucille Wurramara, James Bednall, Katelynn Bara, Jennie Bara Bara and Donna Mamarika at the Groote Eylandt 
                          Language Centre in Umbakumba NT, 2021</h6>
                </div>
