--- a/index.html
+++ b/index.html
@@ -594,15 +594,15 @@
 
                          <h3>Book chapters</h3>
                          
-                         <p><strong>Bednall, James</strong>. in press. ‘Tense and aspect’ in C. Bowern (ed.) <i>The Oxford Guide to Australian Languages</i>. Oxford, UK: Oxford University Press. 
-                              33 pages. [expected 2022].</p>
+                         <p><strong>Bednall, James</strong>. in press. ‘Tense and aspect’ in C. Bowern (ed.) <i><a href="https://global.oup.com/academic/product/the-oxford-guide-to-australian-languages-9780198824978?cc=au&lang=en&" target="_blank">The Oxford 
+                              Guide to Australian Languages</a></i> (pp. 378-391). Oxford, UK: Oxford University Press. [expected December 2022].</p>
                          <br>
-                         <p><strong>Bednall, James</strong>. in press. ‘Modality and mood’ in C. Bowern (ed.) <i>The Oxford Guide to Australian Languages</i>. Oxford, UK: Oxford University Press. 
-                              42 pages. [expected 2022].</p>
+                         <p><strong>Bednall, James</strong>. in press. ‘Modality and mood’ in C. Bowern (ed.) <i><a href="https://global.oup.com/academic/product/the-oxford-guide-to-australian-languages-9780198824978?cc=au&lang=en&" target="_blank">The Oxford Guide to Australian Languages</a></i> 
+                              (pp. 392-410). Oxford, UK: Oxford University Press. [expected December 2022].</p>
                          <br>
                          <p><strong>Bednall, James</strong>. in press. ‘Yirriyengburnama-langwa mamawura-langwa: Talking about time in Anindilyakwa’ in A. McGrath, J. Troy & L. Rademaker 
-                              (eds.) <i>Everywhen: Conceiving, Knowing, and Narrating the Past of Indigenous Australia</i>. Lincoln: University of Nebraska Press. 26 pages. 
-                              [expected 2022].</p>
+                              (eds.) <i><a href="https://www.nebraskapress.unl.edu/nebraska/9781496227287/" target="_blank">Everywhen: Conceiving, Knowing, and Narrating the Past of Indigenous Australia</a></i> 
+                              (pp. 127-149). Lincoln: University of Nebraska Press. [expected January 2023].</p>
                          <br>
 
                          <h3>Conference proceedings</h3>
@@ -815,7 +815,17 @@
                          Linguistic Association of Australia (ALAA)</i>. 12-14 November 2012, Curtin University, Australia.</p>
                     <br>
 
+                    <!-- INVITED TALKS -->
+                    
                     <h3>Invited talks</h3>
+
+                    <p><strong>Bednall, James</strong>. 2022. <a href="https://www.youtube.com/watch?v=Wn-yIt5IU0E" target="_blank">Co-opting semantic case to express grammatical relations in Anindilyakwa.</a> 
+                         Symposium on Languages and Linguistics in honour of Jane Simpson. 30 June – 1 July 2022, Australian National 
+                         University, Australia.</p>
+                    <br>
+
+                    <p><strong>Bednall, James</strong>. 2022. Two types of stylised prosodic lengthening in Anindilyakwa: An overview of their aspectual and discourse-emphatic.</p>
+                    <br>
 
                     <p><strong>Bednall, James</strong>, Jacqui Cook, Roderick MacKay, Godfrey Simpson and Rosie Sitorus. 2020. Ngalimi bidagu yan.guwa furnace-di ‘From the quiet, into The Furnace’: 
                          Translating a sleeping language for a feature film. <i>UWA Linguistics Seminar</i>. 29 May 2020, University of Western Australia, Australia.</p>
@@ -839,6 +849,8 @@
                     <p><strong>Bednall, James</strong>. 2013. Fading voices: Local and global perspectives on language endangerment and the erosion of linguistic diversity. <i>Public Lecture Series</i>. 20, 21 
                          November 2013, Western Australian Museum - Geraldton, Australia.</p>
                     <br>
+
+                    <!-- Departmental seminars and other presentations -->
 
                     <h3>Departmental seminars and other presentations</h3>
 
