--- a/index.html
+++ b/index.html
@@ -825,7 +825,9 @@
                          University, Australia.</p>
                     <br>
 
-                    <p><strong>Bednall, James</strong>. 2022. Two types of stylised prosodic lengthening in Anindilyakwa: An overview of their aspectual and discourse-emphatic properties. <i>FEMIDAL Seminar.</i> 18 February 2022, Online Seminar, Université de Paris, France.</p>
+                    <p><strong>Bednall, James</strong>. 2022. Two types of stylised prosodic lengthening in Anindilyakwa: An overview 
+                         of their aspectual and discourse-emphatic properties. <i>FEMIDAL Seminar.</i> 18 February 2022, 
+                         Online Seminar, Université de Paris, France.</p>
                     <br>
 
                     <p><strong>Bednall, James</strong>, Jacqui Cook, Roderick MacKay, Godfrey Simpson and Rosie Sitorus. 2020. Ngalimi bidagu yan.guwa furnace-di ‘From the quiet, into The Furnace’: 
@@ -854,6 +856,16 @@
                     <!-- Departmental seminars and other presentations -->
 
                     <h3>Departmental seminars and other presentations</h3>
+
+                    <p><strong>Bednall, James</strong>. 2022. Capturing and sharing linguistic and cultural knowledge in 
+                         Anindilyakwa. <i>CoEDL ANU Showcase – Australian Languages.</i> 4 March 2022, Online Seminar, Australian 
+                         National University, Australia.</p>
+                    <br>
+
+                    <p><strong>Bednall, James</strong>. 2022. Identifying salient Aktionsart properties in Anindilyakwa. <i>Launch of 
+                         ‘Australian Languages Today’, a special issue of the journal Languages.</i> 25 February 2022, Online Seminar, 
+                         Australian National University, Australia.</p>
+                    <br>
 
                     <p><strong>Bednall, James</strong>. 2020. Temporal, aspectual and modal inflectional marking in Anindilyakwa. <i>Thesis Defence</i>. 13 February 2020, Australian National University, Australia.</p>
                     <br>
@@ -923,12 +935,6 @@
                     English as an Additional Language or Dialect (EAL/D) and music studies. Additionally, I have worked in collaboration with Indigenous colleagues in areas of 
                     Indigenous languages education, in both school-based programs and adult-focused community-run programs.</p>
                     <br>
-                    <p>My background in teaching and education includes:
-                    <ul class="bullet">
-                         <li>Tertiary education: course convening; lecturing and tutoring undergraduate and graduate students (Diploma, Bachelor and Master’s degrees);</li>
-                         <li>Primary and secondary education: teaching students at (public and private) primary and secondary schools, and at private academies.</li>
-                    </ul>
-               </p>
                <br>
 
                <h2>Batchelor Institute of Indigenous Tertiary Education & Charles Darwin University</h2>
