--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@
           <div class="row">
      <center><h1>Connect</h1></center>
      <br>
-               <div class="col-md-12 col-sm-12">
+               <div class="col-md-12 col-sm-12"><center>
                     <ul class="social-icon">
                          <li><a href="https://scholar.google.com/citations?user=Vwpe_PUAAAAJ&hl=en" target="_blank"><div class="project-image23"></div></a></li>
 
@@ -1066,6 +1066,7 @@
 
 
                     </ul>
+               </center>
                </div>
           </div>
      </div>
