--- a/anindilyakwa.html
+++ b/anindilyakwa.html
@@ -175,13 +175,18 @@
                               <li>Bednall, James. 2021. <a href="https://www.mdpi.com/2226-471X/6/4/164" target="_blank">Identifying salient Aktionsart properties in 
                                    Anindilyakwa.</a> <i>Languages</i> 6(4), 164. <a href="https://www.mdpi.com/2226-471X/6/4/164/pdf" target="_blank">Download PDF.</a></li>
 
-                              <li><strong>Bednall, James</strong>. 2023. ‘Yirriyengburnama-langwa mamawura-langwa: Talking about time in Anindilyakwa’ in A. McGrath, J. Troy & L. Rademaker 
+                              <li>Bednall, James. 2023. ‘Yirriyengburnama-langwa mamawura-langwa: Talking about time in Anindilyakwa’ in A. McGrath, J. Troy & L. Rademaker 
                                    (eds.) <i><a href="https://www.nebraskapress.unl.edu/nebraska/9781496227287/" target="_blank">Everywhen: Conceiving, Knowing, and Narrating the Past of Indigenous Australia</a></i> 
                                    (pp. 127-149). Lincoln: University of Nebraska Press.</li>
 
-                              <li>Caudal, Patrick and <strong>James Bednall</strong>. 2023. <a href="https://www.mdpi.com/2226-471X/8/1/8" target="_blank">Aspectuo-temporal underspecification in Anindilyakwa: Descriptive,
+                              <li>Caudal, Patrick and James Bednall. 2023. <a href="https://www.mdpi.com/2226-471X/8/1/8" target="_blank">Aspectuo-temporal underspecification in Anindilyakwa: Descriptive,
                                    theoretical, typological and quantitative issues</a>. <i>Languages</i> 8(1), 8. <a href="https://www.mdpi.com/2226-471X/8/1/8/pdf?version=1672108983" target="_blank">Download PDF.</a></li>
-                         </ul>
+                         
+                              <li>Mansfield, John, Rosey Billington and Hywel Stoakes. forthcoming. '<a href="https://psyarxiv.com/fpcrj" target="_blank">
+                                   Vowel predictability and omission in Anindilyakwa</a>' in Lori Repetti et al (eds.) <i>Epenthesis and beyond: Recent 
+                                        approaches to insertion in phonology and its interfaces</i>. Language Sciences Press.
+                              </li>
+                              </ul>
                          <br>
 
                          <h3>Archived language collections are available at:</h3>
