--- a/anindilyakwa.html
+++ b/anindilyakwa.html
@@ -167,7 +167,7 @@
                                    of the Groote Eylandt archipelago, Australia</i></a>. PhD thesis, Australian National University & Université de Paris. </li>
 
                             <li>Bednall, James. 2020. <a href="https://www.jbe-platform.com/content/journals/10.1075/pc.00013.bed" target="_blank">Feeling through your 
-                              chest: Body-based tropes for emotion in Anindilyakwa</a>. <i>Pragmatics and Cognition 27(1), 139-183.</i></li>	
+                              chest: Body-based tropes for emotion in Anindilyakwa</a>. <i>Pragmatics and Cognition</i> 27(1), 139-183.</li>	
 
                               <li>van Egmond, Marie-Elaine and Brett Baker. 2020. <a href="https://www.tandfonline.com/doi/abs/10.1080/07268602.2020.1848796" target="_blank">The genetic 
                                    position of Anindilyakwa</a>. <i>Australian Journal of Linguistics</i> 40(4), 492-527.</li>
