--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
                <div class="row">
                     <div class="container-fluid">
                          <!-- <h2>Minimal Design</h2> -->
-                         <p>I am a lecturer in linguistics at <a href="https://www.batchelor.edu.au/students/courses/higher-education-courses/he-languages-and-linguistics/" target="_blank">
-                              Batchelor Institute of Indigenous Tertiary Education</a> (BIITE), a visiting fellow at the <a href="https://researchers.anu.edu.au/researchers/bednall-j" target="_blank">Australian National 
+                         <p>I am a lecturer in linguistics at <a href="https://researchers.cdu.edu.au/en/persons/james-bednall">Charles Darwin University</a>, an honorary lecturer at the <a href="https://researchers.anu.edu.au/researchers/bednall-j" target="_blank">Australian National 
                               University</a> and a member of the <a href="https://language-lab.cdu.edu.au/" target="_blank">Top End Language Lab</a>.</p>
 
                          <p>My experience as a linguist spans the research, teaching, community development and not-for-profit sectors, including substantial project 
