--- a/index.html
+++ b/index.html
@@ -92,16 +92,23 @@
                <div class="row">
                     <div class="container-fluid">
                          <!-- <h2>Minimal Design</h2> -->
-                         <p>I am a lecturer in linguistics at <a href="https://researchers.cdu.edu.au/en/persons/james-bednall">Charles Darwin University</a>, an honorary lecturer at the <a href="https://researchers.anu.edu.au/researchers/bednall-j" target="_blank">Australian National 
-                              University</a> and a member of the <a href="https://language-lab.cdu.edu.au/" target="_blank">Top End Language Lab</a>.</p>
+                        <p>I am a linguist, based on Larrakia country, in Darwin, Australia. I studied linguistics and music (BA(Hons)/BMus) at the 
+                        University of Western Australia, before working as a linguist at <a href="https://www.bundiyarra.com/irrawangga" target="_blank">Bundiyarra – 
+                        Irra Wangga Language Centre</a> (BIW). I continue to collaborate and partner with BIW, particularly working with the 
+                        Badimia/Badimaya community.
+                        </p>
 
-                         <p>My experience as a linguist spans the research, teaching, community development and not-for-profit sectors, including substantial project 
-                              and people management, teamwork, and local/national/international collaboration. Find out more about 
-                              my <a href="#research">research</a>, <a href="#projects">projects</a>, <a href="#publications">publications</a> and 
-                              <a href="#teaching">teaching</a>.</p>
+                        <p>I undertook my <a href="https://openresearch-repository.anu.edu.au/handle/1885/167214" target="_blank">PhD</a> at the Australian National 
+                        University & Université de Paris, with a thesis examining temporal, aspectual and modal expression in Anindilyakwa, the 
+                        language of the Groote Eylandt archipelago. During and following my PhD, I worked in various positions (consultant, linguist 
+                        and language centre coordinator) for the Anindilyakwa Land Council’s <a href="https://www.anindilyakwa.org.au/" target="_blank">Groote 
+                        Language Centre</a>.</p>
 
-                              <p style="font-style: italic; font-size:15px;">Aboriginal and Torres Strait Islander readers are warned that this website contains photos 
-                                   and mentions names of deceased persons, which may cause sadness or distress. Photos and names are provided with permission.</p>
+                        <p>I was a lecturer in languages and linguistics at <a href="https://www.batchelor.edu.au/students/courses/higher-education-courses/he-languages-and-linguistics/" target="_blank"> Batchelor 
+                            Institute of Indigenous Tertiary Education</a> (BIITE), and since 2023 have held the position of lecturer in linguistics at 
+                        <a href="https://researchers.cdu.edu.au/en/persons/james-bednall" target="_blank"> Darwin University</a>.</p>
+
+
                     </div>
                </div>
 
